作り直しにほとんど成功、後はリスト関係など

--- a/test/fixtures/school_classes.yml
+++ b/test/fixtures/school_classes.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  syllibus_id: 1
-  schedule_id: 1
-  instructor_id: 1
-  semster_id: 1
+  code: MyString
+  syllabus: 
+  schedule: 
+  teacher: 
 
 two:
-  syllibus_id: 1
-  schedule_id: 1
-  instructor_id: 1
-  semster_id: 1
+  code: MyString
+  syllabus: 
+  schedule: 
+  teacher: 
