--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -5,15 +5,15 @@ one:
   address: MyText
   phone: MyString
   email: MyString
-  birth: 2012-01-30
-  admitted: 2012-01-30
-  graduated: 2012-01-30
+  birth: 2012-02-02
+  admitted: 2012-02-02
+  gradutated: 2012-02-02
 
 two:
   name: MyString
   address: MyText
   phone: MyString
   email: MyString
-  birth: 2012-01-30
-  admitted: 2012-01-30
-  graduated: 2012-01-30
+  birth: 2012-02-02
+  admitted: 2012-02-02
+  gradutated: 2012-02-02
