Gitignore various files, schema.rb changed

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,21 @@
 /app/assets/javascripts/jquery.wijmo-complete.all.2.0.0.min.js
 /app/assets/stylesheets/jquery.wijmo-complete.2.0.0.css
 /app/assets/stylesheets/jquery.wijmo-complete.all.2.0.0.min.css
+
+
+\#*
+*~
+.#*
+.DS_Store
+.sass_cache
+.idea
+.project
+nbproject
+spec/dummy
+*.swp
+*.orig
+Gemfile.lock
+.rvmrc
+*.sublime-project
+*.sublime-workspace
+
