--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "bundle exec rake db:migrate"
 
 script: "DISPLAY=:99.0 bundle exec rake"
 
