--- a/core/lib/generators/gaku/dummy/templates/rails/database.yml
+++ b/core/lib/generators/gaku/dummy/templates/rails/database.yml
@@ -46,12 +46,26 @@ production:
   
 <% else %>
 development:
-  adapter: sqlite3
-  database: "db/gaku_development.sqlite3"
+  adapter: mysql2
+  encoding: utf8
+  database: gaku_development
+  username: gaku
+  password: some_pass
+  host: 127.0.0.1
+  port: 3306
+
 test:
-  adapter: sqlite3
-  database: "db/gaku_test.sqlite3"
+  adapter: mysql2
+  encoding: utf8
+  database: gaku_test
+  username: gaku
+  password: some_pass
+  host: 127.0.0.1
+  port: 3306
+
 production:
-  adapter: sqlite3
-  database: "db/gaku_production.sqlite3"
+  adapter: mysql2
+  database: gaku_production
+  username:
+  encoding: utf8
 <% end %>
