--- a/core/Rakefile
+++ b/core/Rakefile
@@ -1,5 +1,5 @@
 require 'rubygems'
-#require 'bundler'
+require 'bundler'
 require 'rake'
 require 'rake/testtask'
 require 'rake/packagetask'
@@ -7,43 +7,13 @@ require 'rubygems/package_task'
 require 'rspec/core/rake_task'
 require 'gaku/core/testing_support/common_rake'
 
-#require File.expand_path('../config/application', __FILE__)
-
-#GAKUEngine::Application.load_tasks
 Bundler::GemHelper.install_tasks
-#Bundler.setup
 RSpec::Core::RakeTask.new
 
 spec = eval(File.read('gaku_core.gemspec'))
 Gem::PackageTask.new(spec) do |p|
   p.gem_spec = spec
 end
-
-=begin
-task :all_tests => [:environment] do
-  ["rake spec"].each do |cmd|
-    puts "Starting to run #{cmd}..."
-    system("bundle exec #{cmd}")
-    raise "#{cmd} failed!" unless $?.exitstatus == 0
-  end
-end
-
-
-desc "Generates a dummy app for testing"
-task :test_app do
-  Rails.env = "test"
-  puts "Setting up dummy database..."
-  Rake::Task['db:drop'].invoke
-  Rake::Task['db:create'].invoke
-  Rake::Task['db:migrate'].invoke
-  Rake::Task['db:test:prepare'].invoke
-end
-
-
-task :default => [:all_tests]
-=end
-
-
 
 desc "Release to gemcutter"
 task :release do
@@ -58,6 +28,3 @@ task :test_app do
   ENV['LIB_NAME'] = 'gaku/core'
   Rake::Task['common:test_app'].invoke
 end
-
-
-
