--- a/core/Gemfile
+++ b/core/Gemfile
@@ -1,3 +1,11 @@
 eval(File.read(File.dirname(__FILE__) + '/../gaku_engine_dependencies.rb'))
 
 gemspec
+
+group :development do
+  gem "rspec"
+  gem "bundler"
+  gem "jeweler"
+  gem 'i18n-spec'
+  gem 'localeapp'
+end
