--- a/core/Rakefile
+++ b/core/Rakefile
@@ -28,3 +28,10 @@ task :test_app do
   ENV['LIB_NAME'] = 'gaku/core'
   Rake::Task['common:test_app'].invoke
 end
+
+desc 'Run factory specs.'
+RSpec::Core::RakeTask.new(:factory_specs) do |t|
+  t.pattern = './spec/models/factories_spec.rb'
+end
+
+task spec: :factory_specs
