--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 before_script:
-  - "sh -e /etc/init.d/xvfb start"
-  - "bundle exec rake test_app"
+  - sh -e /etc/init.d/xvfb start
+  - export DISPLAY=:99.0
+bundler_args: --without development production --quiet
 env:
-  - DB=mysql
-  - DB=postgres
-script:
-  - "export DISPLAY=:99.0"
-  - "alias set_gemfile='export BUNDLE_GEMFILE=\"`pwd`/Gemfile\"'"
-  - "cd core; set_gemfile; bundle install --quiet; SELENIUM=1 I18N=1 bundle exec rspec spec"
-  - "cd ../admissions; set_gemfile; bundle install --quiet; SELENIUM=1 I18N=1 bundle exec rspec spec"
+  - GEM=admissions DB=mysql
+  - GEM=admissions DB=postgres
+  - GEM=core DB=mysql
+  - GEM=core DB=postgres
 
+before_install:
+  - cd $GEM; export BUNDLE_GEMFILE="`pwd`/Gemfile"
+script:
+  - bundle exec rake test_app
+  - SELENIUM=1 I18N=1 bundle exec rspec spec
+
+  
 notifications:
   email:
     - false
