--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,20 @@ before_script:
   - export DISPLAY=:99.0
 bundler_args: --without development production --quiet
 env:
-  - GEM=admissions DB=mysql
-  - GEM=admissions DB=postgres
-  - GEM=core DB=mysql
-  - GEM=core DB=postgres
+  - GEM=admissions DB=mysql DRIVER=PHANTOMJS
+  - GEM=admissions DB=mysql DRIVER=SELENIUM
+  - GEM=admissions DB=postgres DRIVER=SELENIUM
+  - GEM=core DB=mysql DRIVER=PHANTOMJS
+  - GEM=core DB=mysql DRIVER=SELENIUM
+  - GEM=core DB=postgres DRIVER=SELENIUM
 
 before_install:
   - cd $GEM; export BUNDLE_GEMFILE="`pwd`/Gemfile"
 script:
   - bundle exec rake test_app
-  - SELENIUM=1 I18N=1 bundle exec rspec spec
+  - $DRIVER I18N=1 bundle exec rspec spec
 
-  
+
 notifications:
   email:
     - false
