--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - cd $GEM; export BUNDLE_GEMFILE="`pwd`/Gemfile"
 script:
   - bundle exec rake test_app
-  - $DRIVER I18N=1 bundle exec rspec spec
+  - $DRIVER=1 I18N=1 bundle exec rspec spec
 
 
 notifications:
